--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react_ujs": "^2.6.1",
+    "tailwindcss": "^1.6.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
